--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="select defaultSelect">
       <div class="tag">
-        <p class="text blackText">全部好友</p>
+        <p class="text">全部好友</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
@@ -77,7 +77,7 @@
         <p class="text redText">測試標籤</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
-    </div>    
+    </div>
   </div>
 
 </body>
