--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="click"></div>
+
+  <div class="outside">
+    <div class="title">好友標籤</div>
+    <div class="showRoom">
+      <div class="spaceTag displayNone"><span>＋ </span>點擊以新增標籤</div>
+      <div class="tagSustain" id="showTag1">標籤 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain" id="showTag2">測試標籤 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag3">測試標籤3 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag4">標籤4 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag5">測試標籤標籤 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag6">測試6標籤 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag7">777測試標籤 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag8">測試標籤88 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag9">測試9 <i class="fas fa-times-circle"></i></div>
+      <div class="tagSustain displayNone" id="showTag10">10101010 <i class="fas fa-times-circle"></i></div>
+
+      <div class="add">＋</div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="select defaultSelect">
       <div class="tag">
@@ -18,63 +39,63 @@
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select defaultSelect">
-      <div class="tag">
+    <div class="select defaultSelect" id="select1">
+      <div class="tag TagShow">
+        <p class="text">標籤</p>
+      </div>
+      <div class="check CheckShow"><i class="fas fa-check"></i></div>
+    </div>
+    <div class="select defaultSelect" id="select2">
+      <div class="tag TagShow">
         <p class="text">測試標籤</p>
       </div>
-      <div class="check"><i class="fas fa-check"></i></div>
+      <div class="check CheckShow"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select defaultSelect">
+    <div class="select greenSelect" id="select3">
       <div class="tag">
-        <p class="text">測試標籤</p>
+        <p class="text greenText">測試標籤3</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select greenSelect">
+    <div class="select greenSelect" id="select4">
       <div class="tag">
-        <p class="text greenText">測試標籤</p>
+        <p class="text greenText">標籤4</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select greenSelect">
+    <div class="select orangeSelect" id="select5">
       <div class="tag">
-        <p class="text greenText">測試標籤</p>
+        <p class="text orangeText">測試標籤標籤</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select orangeSelect">
+    <div class="select orangeSelect" id="select6">
       <div class="tag">
-        <p class="text orangeText">測試標籤</p>
+        <p class="text orangeText">測試6標籤</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select orangeSelect ">
+    <div class="select orangeSelect" id="select7">
       <div class="tag">
-        <p class="text orangeText">測試標籤</p>
+        <p class="text orangeText">777測試標籤</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select orangeSelect ">
+    <div class="select orangeSelect" id="select8">
       <div class="tag">
-        <p class="text orangeText">測試標籤</p>
+        <p class="text orangeText">測試標籤88</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select orangeSelect ">
+    <div class="select redSelect" id="select9">
       <div class="tag">
-        <p class="text orangeText">測試標籤</p>
+        <p class="text redText">測試9</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
-    <div class="select redSelect">
+    <div class="select redSelect" id="select10">
       <div class="tag">
-        <p class="text redText">測試標籤</p>
-      </div>
-      <div class="check"><i class="fas fa-check"></i></div>
-    </div>
-    <div class="select redSelect">
-      <div class="tag">
-        <p class="text redText">測試標籤</p>
+        <p class="text redText">101010</p>
       </div>
       <div class="check"><i class="fas fa-check"></i></div>
     </div>
